style: add Checkstyle, reformat, fix violations
Config from hosh-shell/hosh (checkstyle.xml + maven-checkstyle-plugin
3.6.0 bound to validate phase). IntelliJ global reformat applied.
Remaining violations fixed: rename LANES→lanes, F10→f10, IF10→if10,
allow underscores in MethodName for test methods, add missing newline
in CodecRegistry.java.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>